--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
   </head>
   <body>
     <header>
+
+      <div class="kea_logo">
+        <a href="index.html">
+        <h5>KEA</h5>
+      </a>
+    </div>
       <nav>
         <ul class="menu">
           <li>
@@ -40,19 +46,20 @@
         />
 
         <div class="text_overlay">
-          <h3>Åbningstider</h3>
           <ul class="opening_hours">
+            <li>Åbningstider</li>
             <li>Mandag - Torsdag 9-15</li>
-            <li>Fredag 9-15</li>
+            <li><span class="day">Fredag</span> <span class="time">9-15</span></li>
             <li>tlf: 46 46 04 42</li>
           </ul>
         </div>
       </article>
+      <section class="info_index">
       <div class="info__headline">
         <h1>Velkommen til Tech & Story Lab</h1>
       </div>
-      <section class="info_index">
-        <p>
+     
+        <p class="info_forside_tekst">
           Tech & Story Lab er et lab med fokus på ny teknologi for KEAs
           studerende, undervisere og øvrige ansatte.
           <br />
@@ -63,8 +70,8 @@
           <div class="info_index_img">
             <img src="Logo_Tech&Story.svg" alt="tech & Story Lab Logo" />
           </div>
-          <div class="btn__acces">
-            <a href="book_studier.html" class="btn__acces_lab">
+          <div class="cta_2">
+            <a href="book_studier.html">
               Adgang til lab
             </a>
           </div>
@@ -76,7 +83,9 @@
           <div class="item__headline">
             <h3>Foto, Lyd & Video</h3>
             <div class="btn__category">
+              <a href="product_list.html">
               <button class="cta">Læs mere</button>
+            </a>
             </div>
           </div>
           <div class="category__image image_item_1">
