--- a/index.html
+++ b/index.html
@@ -82,10 +82,9 @@
         <article class="item item_1">
           <div class="item__headline">
             <h3>Foto, Lyd & Video</h3>
-            <div class="btn__category">
-              <a href="product_list.html">
-              <button class="cta">Læs mere</button>
-            </a>
+            <h3 class="cta">
+              <a style="text-decoration: none; color: white;" href="product_list.html">Læs mere</a>
+            </h3>
             </div>
           </div>
           <div class="category__image image_item_1">
@@ -100,14 +99,14 @@
         <article class="item item_2">
           <div class="item__headline">
             <h3>Studier</h3>
-            <div class="btn__category">
-              <button class="cta">Læs mere</button>
-            </div>
+            <h3 class="cta">
+              <a style="text-decoration: none; color: white;" href="book_studier.html">Læs mere</a>
+            </h3>
           </div>
           <div class="category__image image_item_2">
             <img
               class="image_item"
-              src="/case_work_T07/img_category_index/green_screen.png"
+              src="book_side_fotos/fotostudie.png"
               alt="billede af et Canon Camera"
             />
           </div>
@@ -116,14 +115,14 @@
         <article class="item item_3">
           <div class="item__headline">
             <h3>Virtuel Reality</h3>
-            <div class="btn__category">
-              <button class="cta">Læs mere</button>
-            </div>
+            <h3 class="cta">
+              <a style="text-decoration: none; color: white;" href="product_list.html">Læs mere</a>
+            </h3>
           </div>
           <div class="category__image image_item_3">
             <img
               class="image_item"
-              src="/case_work_T07/img_category_index/green_screen.png"
+              src="img_category_index/canon_2200x1400.png"
               alt="billede af et Canon Camera"
             />
           </div>
@@ -137,14 +136,14 @@
               <br />
               + SD Card
             </h3>
-            <div class="btn__category">
-              <button class="cta">Læs mere</button>
-            </div>
+            <h3 class="cta">
+              <a style="text-decoration: none; color: white;" href="product_list.html">Læs mere</a>
+            </h3>
           </div>
           <div class="category__image">
             <img
               class="image_item image_item_4"
-              src="/case_work_T07/img_category_index/adapter.png"
+              src="img_category_index/adapter.png"
               alt="billede af et Canon Camera"
             />
           </div>
@@ -154,14 +153,14 @@
         <article class="item item_5">
           <div class="item__headline">
             <h3>Raspberry Pie</h3>
-            <div class="btn__category">
-              <button class="cta">Læs mere</button>
-            </div>
+            <h3 class="cta">
+              <a style="text-decoration: none; color: white;" href="product_list.html">Læs mere</a>
+            </h3>
           </div>
           <div class="category__image image_item_5">
             <img
               class="image_item"
-              src="/case_work_T07/img_category_index/respary_pie.png"
+              src="img_category_index/respary_pie.png"
               alt="billede af et Canon Camera"
             />
           </div>
@@ -171,16 +170,17 @@
           <div class="item__headline">
             <h3>Kurser</h3>
           </div>
+          <h3 class="cta">
+            <a style="text-decoration: none; color: white;" href="product_list.html">Læs mere</a>
+          </h3>
           <div class="category__image image_item_6">
             <img
               class="image_item"
-              src="/case_work_T07/img_category_index/kurser.png"
+              src="img_category_index/kurser.png"
               alt="billede af et Canon Camera"
             />
           </div>
-          <div class="btn__category">
-            <button class="cta">Læs mere</button>
-          </div>
+          
         </article>
 
         <div class="item__line"></div>
@@ -194,7 +194,7 @@
             alt="Lab Ansvarlige frederik Lehmann"
           />
         </article>
-        <article class="contact__2">
+        <article class="contact__1">
           <img
             src="foto_kontakt/Luca-fusco.webp"
             alt="Lab Ansvarlige Luca Fusco"
@@ -236,6 +236,14 @@
           alt="kort over Københavns Erhvervsarkemi Guldbergsgade 29N "
         />
       </article>
+
+      <div class="newsletter-signup">
+        <p>Tilmeld dig vores nyhedsmail med nyheder, kampagner og meget mere.</p>
+        <form action="#" method="post">
+          <input type="email" placeholder="Din e-mail" required />
+          <button type="submit">Tilmeld</button>
+        </form>
+      </div>
     </main>
     <footer class="footer">
       <h2>KEA - Københavns Erhvervsakademi</h2>
